Update ML_semester3 - Copy.ipynb

--- a/ML_semester3 - Copy.ipynb
+++ b/ML_semester3 - Copy.ipynb
@@ -17,30 +17,30 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jassa\\AppData\\Local\\Temp\\ipykernel_28996\\564799908.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "from sklearn.preprocessing import RobustScaler\n",
+    "from imblearn.over_sampling import ADASYN\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import f1_score, classification_report, confusion_matrix, precision_recall_curve, ConfusionMatrixDisplay\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import svm\n",
+    "from imblearn.under_sampling import InstanceHardnessThreshold\n",
+    "import scipy.stats\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn import metrics \n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from imblearn.over_sampling import ADASYN\n",
+    "from imblearn.under_sampling import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import missingno as msno\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from scipy import stats"
+    "from scipy import statsimport InstanceHardnessThreshold"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2140,12 +2140,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import RobustScaler\n",
-    "from imblearn.over_sampling import ADASYN\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import f1_score, classification_report, confusion_matrix, precision_recall_curve\n",
-    "\n",
     "test = pd.read_csv('test.csv') \n",
     "train = pd.read_csv('train.csv')\n",
     "\n",
@@ -2473,12 +2467,6 @@
     }
    ],
    "source": [
-    "# Import train_test_split function\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn import svm\n",
-    "from imblearn.under_sampling import InstanceHardnessThreshold\n",
-    "\n",
     "train = pd.read_csv('train.csv')\n",
     "test = pd.read_csv('test.csv')\n",
     "\n",
@@ -2619,17 +2607,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import f1_score\n",
-    "import scipy.stats"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
@@ -2654,7 +2631,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
     "param_grid = {'kernel': ['rbf'],\n",
     "              'C' : [0.1, 1, 10, 50, 100, 150,],\n",
     "#              'class_weight': ['balanced', None],\n",
@@ -2693,23 +2669,6 @@
    "metadata": {},
    "source": [
     "## 3.4 Decision Tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
-    "from sklearn import metrics \n",
-    "from sklearn.metrics import classification_report, f1_score, confusion_matrix, ConfusionMatrixDisplay\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from imblearn.over_sampling import ADASYN\n",
-    "from imblearn.under_sampling import InstanceHardnessThreshold"
    ]
   },
   {
@@ -2762,6 +2721,7 @@
     "              'max_features': [None, 'sqrt', 'log2'], # Manieren om features uit te kiezen\n",
     "              'max_leaf_nodes': [None, 10, 20, 30], # Maximale aantal nodes\n",
     "              'ccp_alpha': [0.001, 0.01, 0.1, 0.0], # Pruning strategie\n",
+    "}\n",
     "dt_cv = GridSearchCV(estimator=dt, param_grid=param_grid, cv=5, scoring='f1', n_jobs=-1)\n",
     "dt_cv.fit(X, y) \n",
     "\n",
