--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -2596,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2605,27 +2605,27 @@
      "text": [
       "stroke\n",
       "0    21711\n",
-      "1    21711\n",
+      "1      515\n",
       "Name: count, dtype: int64\n",
-      "F1 score: 0.9813054992989562\n",
+      "F1 score: 0.5819672131147541\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.98      0.99      0.98      6581\n",
-      "           1       0.99      0.98      0.98      6446\n",
+      "           0       0.99      1.00      0.99      6519\n",
+      "           1       0.75      0.48      0.58       149\n",
       "\n",
-      "    accuracy                           0.98     13027\n",
-      "   macro avg       0.98      0.98      0.98     13027\n",
-      "weighted avg       0.98      0.98      0.98     13027\n",
+      "    accuracy                           0.98      6668\n",
+      "   macro avg       0.87      0.74      0.79      6668\n",
+      "weighted avg       0.98      0.98      0.98      6668\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Import train_test_split function\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn import svm\n",
     "from imblearn.under_sampling import InstanceHardnessThreshold\n",
+    "from sklearn.metrics import f1_score\n",
     "\n",
     "train = pd.read_csv('train.csv')\n",
     "test = pd.read_csv('test.csv')\n",
@@ -2663,23 +2663,16 @@
     "\n",
     "print(y_resampled.value_counts())\n",
     "\n",
-    "# Split dataset into training set and test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.3,random_state=42) # 70% training and 30% test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.3,random_state=42)\n",
     "\n",
-    "#Create a svm Classifier\n",
     "clf = svm.SVC(kernel='rbf', C=100)\n",
     "\n",
-    "#Train the model using the training sets\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
-    "#Predict the response for test dataset\n",
     "y_pred = clf.predict(X_test)\n",
     "\n",
-    "#Import scikit-learn metrics module for accuracy calculation\n",
-    "from sklearn import metrics\n",
     "\n",
-    "# Model Accuracy: how often is the classifier correct?\n",
-    "print(\"F1 score:\",metrics.f1_score(y_test, y_pred))\n",
+    "print(\"F1 score:\", f1_score(y_test, y_pred))\n",
     "\n",
     "print(classification_report(y_test, y_pred))"
    ]
@@ -2694,125 +2687,6 @@
     "SVM_pred_df = test_data_ids.to_frame()\n",
     "SVM_pred_df['stroke'] = SVM_pred\n",
     "SVM_pred_df.to_csv('SVM_pred_13.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>stroke</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>32840</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>45158</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>56105</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3112</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>35224</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8383</th>\n",
-       "      <td>60672</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8384</th>\n",
-       "      <td>25989</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8385</th>\n",
-       "      <td>34072</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8386</th>\n",
-       "      <td>32400</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8387</th>\n",
-       "      <td>53144</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8388 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id  stroke\n",
-       "0     32840       0\n",
-       "1     45158       0\n",
-       "2     56105       0\n",
-       "3      3112       0\n",
-       "4     35224       0\n",
-       "...     ...     ...\n",
-       "8383  60672       0\n",
-       "8384  25989       0\n",
-       "8385  34072       0\n",
-       "8386  32400       0\n",
-       "8387  53144       0\n",
-       "\n",
-       "[8388 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preddy = pd.read_csv('SVM_pred_13.csv')\n",
-    "\n",
-    "preddy"
    ]
   },
   {
@@ -2924,9 +2798,9 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "param_grid = {'kernel': ['rbf'],\n",
     "              'C' : [0.1, 1, 10, 100,],\n",
-    "              'class_weight': ['balanced', None],\n",
+    "#              'class_weight': ['balanced', None],\n",
     "#              'degree': [1, 2, 3], alleen relevant voor polynominal\n",
-    "              'gamma': ('scale', 'auto', 0.0001,  0.01, 1, 10),\n",
+    "#              'gamma': ('scale', 'auto', 0.0001,  0.01, 1, 10),\n",
     "#              'probability': [True]\n",
     "#              'decision_function_shape': [ 'ovo', 'ovr'], Maakt niet uit voor binary probleem\n",
     "#              'break_ties': [True, False] geen multiclass probleem dus niet relevant\n",
@@ -2944,8 +2818,6 @@
     "best_hyperparams = grid_dt.best_params_\n",
     "print('Best hyerparameters:\\n', best_hyperparams)\n",
     "\n",
-    "#y_proba = best_svm.predict_proba(X_test)[:,1]\n",
-    "#y_predi_custom_threshold = (y_proba >= 0.5).astype(int)\n",
     "print(\"F1 Score\", f1_score(y_test, y_pred))\n",
     "print(\"classification_report:\\n\", classification_report(y_test, y_pred))\n"
    ]
@@ -3026,7 +2898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -3053,7 +2925,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\jassa\\anaconda3\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [20:23:00] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0015a694724fa8361-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "c:\\Users\\jassa\\anaconda3\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [20:30:19] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0015a694724fa8361-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
       "Parameters: { \"learing_rate\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -3066,6 +2938,7 @@
     "from xgboost import XGBClassifier\n",
     "from imblearn.under_sampling import InstanceHardnessThreshold\n",
     "from imblearn.over_sampling import ADASYN\n",
+    "from sklearn.metrics import f1_score\n",
     "\n",
     "train = pd.read_csv('train.csv')\n",
     "test = pd.read_csv('test.csv')\n",
@@ -3105,32 +2978,25 @@
     "\n",
     "print(y_resampled.value_counts())\n",
     "\n",
-    "# Split dataset into training set and test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.3,random_state=42) # 70% training and 30% test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.3,random_state=42) \n",
     "\n",
-    "#Create a svm Classifier\n",
     "xgb = XGBClassifier(learing_rate=0.1,\n",
     "                    max_depth = 8\n",
     "                    )\n",
     "\n",
-    "#Train the model using the training sets\n",
     "xgb.fit(X_train, y_train)\n",
     "\n",
-    "#Predict the response for test dataset\n",
     "y_pred = xgb.predict(X_test)\n",
     "\n",
-    "#Import scikit-learn metrics module for accuracy calculation\n",
-    "from sklearn import metrics\n",
     "\n",
-    "# Model Accuracy: how often is the classifier correct?\n",
-    "print(\"F1 score:\",metrics.f1_score(y_test, y_pred))\n",
+    "print(\"F1 score:\", f1_score(y_test, y_pred))\n",
     "\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3138,125 +3004,6 @@
     "XGB_pred_df = test_data_ids.to_frame()\n",
     "XGB_pred_df['stroke'] = XGB_pred\n",
     "XGB_pred_df.to_csv('xgb_pred_2.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>stroke</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>32840</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>45158</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>56105</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3112</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>35224</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8383</th>\n",
-       "      <td>60672</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8384</th>\n",
-       "      <td>25989</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8385</th>\n",
-       "      <td>34072</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8386</th>\n",
-       "      <td>32400</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8387</th>\n",
-       "      <td>53144</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8388 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id  stroke\n",
-       "0     32840       1\n",
-       "1     45158       1\n",
-       "2     56105       0\n",
-       "3      3112       0\n",
-       "4     35224       1\n",
-       "...     ...     ...\n",
-       "8383  60672       0\n",
-       "8384  25989       0\n",
-       "8385  34072       0\n",
-       "8386  32400       0\n",
-       "8387  53144       1\n",
-       "\n",
-       "[8388 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predded = pd.read_csv('xgb_pred_2.csv')\n",
-    "\n",
-    "predded"
    ]
   },
   {
@@ -3313,8 +3060,6 @@
     "best_hyperparams = grid_xgb.best_params_\n",
     "print('Best hyerparameters:\\n', best_hyperparams)\n",
     "\n",
-    "#y_proba = best_svm.predict_proba(X_test)[:,1]\n",
-    "#y_predi_custom_threshold = (y_proba >= 0.5).astype(int)\n",
     "print(\"F1 Score\", f1_score(y_test, y_pred))\n",
     "print(\"classification_report:\\n\", classification_report(y_test, y_pred))"
    ]
