--- a/ML_semester3 - Copy.ipynb
+++ b/ML_semester3 - Copy.ipynb
@@ -3095,6 +3095,113 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report\n",
+    "from xgboost import XGBClassifier\n",
+    "from imblearn.under_sampling import InstanceHardnessThreshold\n",
+    "from imblearn.over_sampling import ADASYN\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "train = pd.read_csv('train.csv')\n",
+    "test = pd.read_csv('test.csv')\n",
+    "\n",
+    "train = train.astype({col: int for col in train.columns if train[col].dtype == 'bool'})\n",
+    "test = test.astype({col: int for col in test.columns if test[col].dtype == 'bool'})\n",
+    "\n",
+    "bmi_col = train[['bmi']]\n",
+    "z_scores = np.abs(stats.zscore(bmi_col))\n",
+    "outliers = np.where(z_scores > 3) \n",
+    "outliers_rows = bmi_col[(z_scores > 3).any(axis=1)] \n",
+    "train = train.drop(outliers_rows.index)\n",
+    "\n",
+    "\n",
+    "train.drop(columns = ['gender_Male' , 'gender_Other' , 'ever_married_No' , 'Residence_type_Rural' , 'id'] , inplace = True)\n",
+    "train.rename(columns = {'gender_Female' : 'gender'} , inplace = True)\n",
+    "\n",
+    "test_data_ids = test['id']\n",
+    "\n",
+    "test.drop(columns = ['gender_Male' , 'gender_Other' , 'ever_married_No' , 'Residence_type_Rural' , 'id'] , inplace = True)\n",
+    "test.rename(columns = {'gender_Female' : 'gender'} , inplace = True)\n",
+    "\n",
+    "\n",
+    "test = sc.fit_transform(test) \n",
+    "\n",
+    "X = train.drop(columns=['stroke'])\n",
+    "y = train['stroke']\n",
+    "\n",
+    "iht = InstanceHardnessThreshold(random_state=42, n_jobs=-1)\n",
+    "adasyn = ADASYN(random_state=42)\n",
+    "X_resampled, y_resampled = iht.fit_resample(X, y)\n",
+    "X_resampled, y_resampled = adasyn.fit_resample(X_resampled, y_resampled)\n",
+    "\n",
+    "sc = StandardScaler()\n",
+    "\n",
+    "X_resampled = sc.fit_transform(X_resampled) \n",
+    "\n",
+    "print(y_resampled.value_counts())\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.3,random_state=42) \n",
+    "\n",
+    "xgb = XGBClassifier(learing_rate=0.1,\n",
+    "                    max_depth = 8\n",
+    "                    )\n",
+    "\n",
+    "xgb.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = xgb.predict(X_test)\n",
+    "\n",
+    "\n",
+    "print(\"F1 score:\", f1_score(y_test, y_pred))\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "XGB_pred = xgb.predict(test)\n",
+    "XGB_pred_df = test_data_ids.to_frame()\n",
+    "XGB_pred_df['stroke'] = XGB_pred\n",
+    "XGB_pred_df.to_csv('xgb_pred_2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "param_grid = {'learing_rate': [0.1, 0.3, 0.8],\n",
+    "              'gamma': [0, 3, 6, 10, 100],\n",
+    "              'max_depth': [2,6,8],\n",
+    "              }\n",
+    "\n",
+    "grid_xgb = GridSearchCV(XGBClassifier(),\n",
+    "                       param_grid=param_grid,\n",
+    "                       scoring='f1',\n",
+    "                       cv=5,\n",
+    "                       n_jobs=-1)\n",
+    "\n",
+    "grid_xgb.fit(X_train, y_train)\n",
+    "\n",
+    "best_svm = grid_xgb.best_estimator_\n",
+    "best_hyperparams = grid_xgb.best_params_\n",
+    "print('Best hyerparameters:\\n', best_hyperparams)\n",
+    "\n",
+    "print(\"F1 Score\", f1_score(y_test, y_pred))\n",
+    "print(\"classification_report:\\n\", classification_report(y_test, y_pred))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
