--- a/ML_semester3 - Copy.ipynb
+++ b/ML_semester3 - Copy.ipynb
@@ -1903,6 +1903,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We hebben te maken met een imbalanced data set, dit houdt in dat minstens één class veel vaker voorkomt dan de andere in ons geval is het aantal personen dat geen stroke heeft gehad en dus 0 value heeft, veel groter dan de mensen die dit wel hebben gehad. Om hier mee om te gaan gebruiken sampling methodes, hier kunnen we 3 dingen doen. Under samplen, dit haal een deel weg van de meerderheids klasse, of over samples dit maak meer data aan voor de minderheids klasse.\n",
+    "\n",
     "Deze sampling methodes werken beter voor andere modellen, daarom zijn alle deze uitgecomment en worden deze aangemaakt opnieuw bij de model cellblokken."
    ]
   },
@@ -4190,11 +4192,10 @@
     "voting_clf = VotingClassifier(estimators=[('lr', clf1), ('rf', clf2), ('svc', clf3)], voting='soft')\n",
     "\n",
     "\n",
-    "param_grid = {'knn__n_neighbors': [1, 3, 5],\n",
-    "              'knn__weights': ['uniform', 'distance'],\n",
+    "param_grid = {'knn__n_neighbors': [3, 5],\n",
     "              'knn__metric': ['euclidean', 'manhattan', 'minkowski'],\n",
     "              'knn__p': [3],\n",
-    "              'lr__C': [0.01, 0.1, 1,],\n",
+    "              'lr__C': [0.01, 0.1, 1],\n",
     "              'lr__penalty': ['l1', 'l2', 'elasticnet'],\n",
     "              'lr__solver': ['liblinear', 'newton-cholesky']              \n",
     "              }\n",
