--- a/ML_semester3 - Copy.ipynb
+++ b/ML_semester3 - Copy.ipynb
@@ -4233,7 +4233,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "| Model                 | Notebook f1 perf  | Kaggle f1 perf|\n",
+    "|-----------------------|-------------------|---------------|\n",
+    "| KNeighborsClassifier  |                   |               |\n",
+    "| Logistic Regression   |                   |               |\n",
+    "| Support Vector Machine| 0.58              | 0.157         |\n",
+    "| Decision Tree         |                   |               |\n",
+    "| Random Forest         |                   |               |\n",
+    "| Gradient Booster      |                   |               |\n",
+    "| XGBoost               |                   |               |"
+   ]
   },
   {
    "cell_type": "markdown",
